# Chord-helper

./: CMakeLists.txt  main.cpp
source/: Scales.cpp  Scales.h  helperFunction.cpp
source/data/: scaleData.cpp  scaleData.h
widgets/: circularLayout.cpp  circularLayout.h  keyboard.cpp  keyboard.h  legend.cpp  legend.h  mainwindow.cpp  mainwindow.h  note.cpp  note.h
